# qprob

./: CHANGELOG.md  LICENSE  README.md  default.nix  qprob.cabal
nix/: overrides.nix
src/: Prelude.hs  Qprob.hs
