cabal-version:       2.0
name:                qprob
version:             0.0.0
synopsis:            probability monad from quantum and classical settings
description:         probability monad from quantum and classical settings
homepage:            https://github.com/chessai/qprob
bug-reports:         https://github.com/chessai/qprob/issues
license:             BSD3
license-file:        LICENSE
author:              sigfpe, chessai
maintainer:          chessai1996@gmail.com
copyright:           2019 sigfpe, chessai
category:            Math
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

source-repository head
  type:                git
  location:            https://github.com/chessai/qprob.git

library
  hs-source-dirs:      src
  exposed-modules:     Qprob
                       

  build-depends:       base >= 4.10.1.0 && < 4.13
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-language:    Haskell2010

test-suite qprob-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base >= 4.10.1.0 && < 4.13
                     , qprob
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-language:    Haskell2010
