cabal-version:       2.0
name:                qprob
version:             0.0.0
synopsis:            probability monad from quantum and classical settings
description:         probability monad from quantum and classical settings
homepage:            https://github.com/chessai/qprob
bug-reports:         https://github.com/chessai/qprob/issues
license:             BSD3
license-file:        LICENSE
author:              sigfpe, chessai
maintainer:          chessai1996@gmail.com
copyright:           2019 sigfpe, chessai
category:            Math
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

source-repository head
  type:                git
  location:            https://github.com/chessai/qprob.git

library
  hs-source-dirs:      src
  exposed-modules:     Qprob
                       

  build-depends:       base-noprelude >= 4.10.1.0 && < 4.13
                     , semirings >= 0.3
                     , linear >= 1.20 && < 1.21
                     , containers >= 0.5 && < 0.7

  ghc-options:         -Wall

  default-language:    Haskell2010
